fixed dependency issues

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL='sqlite://src/data/maji_dev.sqlite'
+DATABASE_URL='sqlite://maji_dev.sqlite'
 GOOGLE_MAPS_API_KEY=AIzaSyCBScX13K21yXDKe5131QXkwhLskNCQi6w
 
 TWILIO_SID=AC5c6190a7f3e77af507fe032caee15cf9
