--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-sequelize": "^0.6.0",
-    "sequelize": "^3.19.3",
+    "sequelize": "^3.30.4",
     "serialize": "^0.1.3",
     "serve-favicon": "^2.3.0",
     "twilio": "^2.5.2"
+  },
+  "devDependencies": {
+    "sqlite3": "^3.1.13"
   }
 }
